--- a/public/site.html
+++ b/public/site.html
@@ -1,9 +1,14 @@
 <html>
     <head>
         <title>Penn Central</title>
+        <meta charset="UTF-8">
+        <meta name="description" content="A central source for information at Penn">
+        <meta name="keywords" content="Penn, Central, UPenn, Labs, dining, students, study">
+        <meta name="author" content="Penn Labs">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div id="react-app"></div>
-        <script src="/js/bundle.js"></script>      
+        <script src="/js/bundle.js"></script>
     </body>
 </html>
