--- a/public/site.html
+++ b/public/site.html
@@ -1,6 +1,8 @@
 <html>
     <head>
         <title>Penn Central</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.3/css/bulma.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <div id="react-app"></div>
