--- a/public/site.html
+++ b/public/site.html
@@ -1,11 +1,14 @@
 <html>
-    <head>
-        <title>Penn Central</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.3/css/bulma.min.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    </head>
-    <body>
-        <div id="react-app"></div>
-        <script src="/js/bundle.js"></script>
-    </body>
+  <head>
+    <title>Penn Basics</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.3/css/bulma.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
+  <body>
+    <div id="react-app"></div>
+    <script src="/js/bundle.js"></script>
+
+    <!-- Google Maps API -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAs8egYX4DaKEODCTaAmQlufmlnh-kCmGs&libraries=places" async defer></script>
+  </body>
 </html>
