--- a/public/mobilepage.html
+++ b/public/mobilepage.html
@@ -12,10 +12,8 @@
     <meta name="theme-color" content="#ffffff">
   </head>
   <body>
-    <div id="react-app"></div>
-    <script src="/js/bundle.js"></script>
-
-    <!-- Google Maps API -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAs8egYX4DaKEODCTaAmQlufmlnh-kCmGs&libraries=places" async defer></script>
+    <h1>Go download the app motherfucker.</h1>
+    <a href="https://itunes.apple.com/us/app/penn-mobile/id944829399?mt=8">Download ios app</a>
+    <a href="https://play.google.com/store/apps/details?id=com.pennapps.labs.pennmobile&hl=en"> Download android app</a>
   </body>
 </html>
