further optimize mobile jawn

--- a/public/mobilepage.html
+++ b/public/mobilepage.html
@@ -41,9 +41,9 @@
           <img class="logo" src="https://i.imgur.com/JhifMZc.png" alt="Penn Basics Logo" />
         </div>
 
-        <h2 class="title is-2 center">Penn Basics is a desktop app</h2>
+        <h3 class="title is-3 center">Penn Basics is made for desktop</h3>
 
-        <p class="center" style="font-size: 120%; margin-bottom: 4rem;">Get your information from our Penn Mobile app</p>
+        <p class="center" style="font-size: 150%; margin-bottom: 4rem;">Since you're on a mobile device, get your information from our Penn Mobile app!</p>
 
         <div style="text-align: center;">
           <a href="https://itunes.apple.com/us/app/penn-mobile/id944829399?mt=8">
