--- a/public/site.html
+++ b/public/site.html
@@ -1,61 +1,36 @@
 <html>
-  <head>
-    <title>Penn Basics</title>
 
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.3/css/bulma.min.css"
-    />
+<head>
+  <title>Penn Basics</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.3/css/bulma.min.css" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="msapplication-TileColor" content="#5bbad5" />
-    <meta name="theme-color" content="#ffffff" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
 
-    <script src="https://kit.fontawesome.com/2611f76bf0.js"></script>
-  </head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="msapplication-TileColor" content="#5bbad5" />
+  <meta name="theme-color" content="#ffffff" />
 
-  <body>
-    <div id="react-app"></div>
-    <script src="/js/bundle.js"></script>
+  <script src="https://kit.fontawesome.com/2611f76bf0.js"></script>
+</head>
 
-    <!-- WeatherWidgets.io API -->
-    <script>
-      !(function(d, s, id) {
-        var js,
-          fjs = d.getElementsByTagName(s)[0]
-        if (!d.getElementById(id)) {
-          js = d.createElement(s)
-          js.id = id
-          js.src = 'https://weatherwidget.io/js/widget.min.js'
-          fjs.parentNode.insertBefore(js, fjs)
-        }
-      })(document, 'script', 'weatherwidget-io-js')
-    </script>
+<body>
+  <div id="react-app"></div>
+  <script src="/js/bundle.js"></script>
 
-    <!-- <script async defer src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2"></script> -->
-    <div id="fb-root"></div>
-    <script
-      async
-      defer
-      crossorigin="anonymous"
-      src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v4.0"
-    ></script>
+  <!-- WeatherWidgets.io API -->
+  <script>
+    !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = 'https://weatherwidget.io/js/widget.min.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'weatherwidget-io-js');
+  </script>
 
-    <!-- Google Maps API -->
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAs8egYX4DaKEODCTaAmQlufmlnh-kCmGs&libraries=places"
-      async
-      defer
-    ></script>
-  </body>
+  <!-- Google Maps API -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAs8egYX4DaKEODCTaAmQlufmlnh-kCmGs&libraries=places"
+    async defer></script>
+</body>
+
 </html>
