--- a/public/site.html
+++ b/public/site.html
@@ -1,36 +1,95 @@
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+    />
 
-<head>
-  <title>Penn Basics</title>
+    <title>Penn Basics</title>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.3/css/bulma.min.css" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta
+      name="description"
+      content="The one-stop spot for the basics of living at Penn. Penn Basics aggregates essential data on dining, laundry, studyspaces, and more."
+    />
+    <meta
+      name="keywords"
+      content="penn, basics, pennbasics, upenn, studyspaces, laundry, coffee, study, studyspots, dining, map, pennlabs, labs"
+    />
+    <meta name="author" content="Penn Labs <contact@pennlabs.org>" />
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-  <link rel="manifest" href="/site.webmanifest" />
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta property="og:title" content="Penn Basics" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://pennbasics.com" />
+    <meta
+      property="og:image"
+      content="https://pennlabs-assets.s3.amazonaws.com/metadata-images/penn-basics.png"
+    />
+    <meta property="og:image:alt" content="Penn Basics logo" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="msapplication-TileColor" content="#5bbad5" />
-  <meta name="theme-color" content="#ffffff" />
+    <meta property="twitter:site" content="@pennlabs" />
+    <meta
+      property="twitter:description"
+      content="The one-stop spot for the basics of living at Penn. Penn Basics aggregates essential data on dining, laundry, studyspaces, and more."
+    />
+    <meta property="twitter:title" content="Penn Basics" />
+    <meta
+      property="twitter:image"
+      content="https://pennlabs-assets.s3.amazonaws.com/metadata-images/penn-basics.png"
+    />
+    <meta property="twitter:image:alt" content="Penn Basics logo" />
+    <meta property="twitter:card" content="summary" />
 
-  <script src="https://kit.fontawesome.com/2611f76bf0.js"></script>
-</head>
+    <!--  -->
 
-<body>
-  <div id="react-app"></div>
-  <script src="/js/bundle.js"></script>
+    <title>Penn Basics</title>
 
-  <!-- WeatherWidgets.io API -->
-  <script>
-    !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = 'https://weatherwidget.io/js/widget.min.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'weatherwidget-io-js');
-  </script>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.3/css/bulma.min.css"
+    />
 
-  <!-- Google Maps API -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAs8egYX4DaKEODCTaAmQlufmlnh-kCmGs&libraries=places"
-    async defer></script>
-</body>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="msapplication-TileColor" content="#5bbad5" />
+
+    <script src="https://kit.fontawesome.com/2611f76bf0.js"></script>
+  </head>
+
+  <body>
+    <div id="react-app"></div>
+    <script src="/js/bundle.js"></script>
+
+    <!-- WeatherWidgets.io API -->
+    <script>
+      !(function(d, s, id) {
+        var js,
+          fjs = d.getElementsByTagName(s)[0]
+        if (!d.getElementById(id)) {
+          js = d.createElement(s)
+          js.id = id
+          js.src = 'https://weatherwidget.io/js/widget.min.js'
+          fjs.parentNode.insertBefore(js, fjs)
+        }
+      })(document, 'script', 'weatherwidget-io-js')
+    </script>
+
+    <!-- Google Maps API -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAs8egYX4DaKEODCTaAmQlufmlnh-kCmGs&libraries=places"
+      async
+      defer
+    ></script>
+  </body>
 </html>
