implement sticky laundry push notification

--- a/public/site.html
+++ b/public/site.html
@@ -73,7 +73,7 @@
 
     <!-- Google Maps API -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAs8egYX4DaKEODCTaAmQlufmlnh-kCmGs&libraries=places"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_K3jctRmX1GvCnWkkaRCn1iX7BVrGJco=places"
       async
       defer
     ></script>
