improve studyspaces search icon loading speed

--- a/public/site.html
+++ b/public/site.html
@@ -48,7 +48,7 @@
 
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
     />
     <link
       rel="stylesheet"
@@ -64,7 +64,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="msapplication-TileColor" content="#5bbad5" />
 
-    <script src="https://kit.fontawesome.com/2611f76bf0.js"></script>
   </head>
 
   <body>
